<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/catImage"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_margin="@dimen/padding_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:background="@color/white" />

    <TextView
        android:id="@+id/catName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_regular"
        android:layout_marginEnd="@dimen/padding_small"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toStartOf="@id/catInfoClose"
        app:layout_constraintStart_toEndOf="@id/catImage"
        app:layout_constraintTop_toTopOf="@id/catImage"
        tools:text="CAT_NAME" />

    <LinearLayout
        android:id="@+id/catInfoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/catName"
        app:layout_constraintTop_toBottomOf="@id/catName"
        android:orientation="vertical">

        <TextView
            android:id="@+id/catCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/cat_detail_country"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/catLifeSpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/cat_detail_life_span"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/catTemperament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/cat_detail_temperament"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/catWiki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/cat_detail_wiki_url"
            android:textAppearance="?attr/textAppearanceBody2" />

        <TextView
            android:id="@+id/catDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/cat_detail_description"
            android:textAppearance="?attr/textAppearanceBody2" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/catInfoClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />



</androidx.constraintlayout.widget.ConstraintLayout>